fix: tabs text wrap

--- a/src/css/tabs.scss
+++ b/src/css/tabs.scss
@@ -51,6 +51,7 @@
       margin: 0 !important;
       color: var(--ifm-navbar-link-color);
       font-size: 14px;
+      text-wrap: nowrap;
     }
 
     & > .tabs__item:hover {
